# translator_sdk_demo

./: README.md  demo.py
translator_edges/: pyproject.toml
translator_edges/translator/edges/: __init__.py
translator_kg/: pyproject.toml
translator_kg/translator/kg/: __init__.py
translator_nodes/: pyproject.toml
translator_nodes/translator/nodes/: __init__.py
translator_sdk/: pyproject.toml
translator_tom/: pyproject.toml
translator_tom/translator/tom/: __init__.py
