[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "translator_sdk"
version = "0.1.0"
description = "Translator SDK Meta Package"
requires-python = ">=3.8"

[project.optional-dependencies]
nodes = ["translator_nodes"]
tom = ["translator_tom"]
edges = ["translator_edges"]
kg = ["translator_kg"]
all = [
    "translator_nodes",
    "translator_tom",
    "translator_edges",
    "translator_kg",
]
